--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
     <div class="container mx-auto">
       <section>
         <div class="text-center">
-          <h1 class="font-bold text-6xl">Document platform</h1>
-          <h1 class="font-bold text-6xl">for your team</h1>
+          <h1 class="font-bold sm:text-6xl text-3xl">Document platform</h1>
+          <h1 class="font-bold sm:text-6xl text-3xl">for your team</h1>
 
           <div class="px-12 sm:px-0">
             <h2 class="mt-8 text-xl mb-6 sm:mb-0">Docmate is a document platform built for developer team.</h2>
