--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO -->
+  <meta name="description" content="Docmate is a document platform for your team">
+  <meta property="og:title" content="Docmate - Document platform for your team" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docmate.io" />
+  <meta property="og:image" content="/images/main.png" />
+
+
   <title>Docmate - Document platform for your team</title>
   <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
