--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./index.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175442700-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-175442700-1');
+  </script>
+
 </head>
 
 <body>
@@ -24,7 +38,7 @@
       <div class="flex-1">
         <h1 class='logo text-2xl'>Docmate</h1>
       </div>
-      <div class="hidden sm:grid grid grid-cols-3 gap-6 self-center text-center flex-1">
+      <div class="hidden sm:grid grid grid-cols-4 gap-6 self-center text-center flex-1">
         <div>
           <a href="#features">Features</a>
         </div>
@@ -33,6 +47,9 @@
         </div>
         <div>
           <a href="https://docs.docmate.io/5a7c975f-8438-46fa-b202-81029241975f">Docs</a>
+        </div>
+        <div>
+          <a href="https://docs.docmate.io/5b597b6b-595a-4e88-9350-3694f7754916#/UNLXdip7">Blog</a>
         </div>
       </div>
       <div class="hidden sm:block flex-1 text-right">
