add feedback ok

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <div class="flex-1">
         <h1 class='logo text-2xl'>Docmate</h1>
       </div>
-      <div class="hidden sm:grid grid grid-cols-4 gap-6 self-center text-center flex-1">
+      <div class="hidden sm:grid grid grid-cols-5 gap-6 self-center text-center flex-1">
         <div>
           <a href="#features">Features</a>
         </div>
@@ -50,6 +50,10 @@
         </div>
         <div>
           <a href="https://docs.docmate.io/5b597b6b-595a-4e88-9350-3694f7754916#/UNLXdip7">Blog</a>
+        </div>
+        <div>
+          <button data-feedbackok-trigger>Feedback</button>
+
         </div>
       </div>
       <div class="hidden sm:block flex-1 text-right">
@@ -127,10 +131,18 @@
 
 
     <footer class="text-center py-24 text-sm">
-      <span>Docmate</span>
-      <span>© All rights reserved.</span>
+      <div>
+        <span>Docmate</span>
+        <span>© 2020 All rights reserved.</span>
+      </div>
+
+      <div class='mt-2'>
+        <span class="">Made with <span class="mr-1">❤️</span>  by <a class="underline" href="https://github.com/djyde">Randy</a></span>
+      </div>
     </footer>
   </div>
+
+  <script src="https://cdn.feedbackok.com/widget.js" data-pid="ir3l9cg" async defer></script>
 </body>
 
 </html>
