--- a/src/index.html
+++ b/src/index.html
@@ -65,12 +65,12 @@
     <div class="container mx-auto">
       <section>
         <div class="text-center">
-          <h1 class="font-bold sm:text-6xl text-3xl">Document platform</h1>
+          <h1 class="font-bold sm:text-6xl text-3xl">Document collaboration platform</h1>
           <h1 class="font-bold sm:text-6xl text-3xl">for your team</h1>
 
           <div class="px-12 sm:px-0">
-            <h2 class="mt-8 text-xl mb-6 sm:mb-0">Docmate is a document platform built for developer team.</h2>
-            <h2 class="text-xl">Write markdown, get shareable and beautiful document, without build process.</h2>
+            <h2 class="mt-8 text-xl mb-6 sm:mb-0">Docmate is a document collaboration platform built for development team.</h2>
+            <h2 class="text-xl">Writing in markdown, getting shareable and beautiful documents, without any build process.</h2>
           </div>
         </div>
       </section>
@@ -86,15 +86,15 @@
         <div class="sm:flex">
           <div class="flex-1 text-left p-12 sm:pl-48">
             <ul class="list-disc leading-loose">
-              <li>Easily organize doc pages by dragging</li>
-              <li>Collabrate with team members</li>
-              <li>Private document (only visible for team members)</li>
-              <li>Use different document template (Docute or Docsify) *</li>
-              <li>Paste to upload images</li>
+              <li>Organize doc pages easily by dragging</li>
+              <li>Collaborate with team members</li>
+              <li>Create private documents (only visible with team members)</li>
+              <li>Use different documentation site generators (Docute or Docsify) *</li>
+              <li>Paste and upload images</li>
             </ul>
 
             <div class="mt-12">
-              <small class="text-gray-500">* Docsify is not support yet.</small>
+              <small class="text-gray-500">* Docsify will be supported soon.</small>
             </div>
           </div>
           <div class="flex-1">
@@ -108,7 +108,7 @@
 
         <div class="mt-12">
           <p>
-            Docmate is still under development, all features is free and unstable now. 😃
+            Docmate is still under active development, all features are free but keep in mind that it is still a beta software. 😃
           </p>
         </div>
       </section>
@@ -118,7 +118,7 @@
 
         <div class="mt-12">
           <p>
-            If you are sensitive about content security or privacy, it's totally free for self hosting a Docmate.
+            Hosting Docmate by yourself is free and you are totally in charge for the security and privacy of your content.
           </p>
           <p>
             <a class="mt-12 inline-block bg-gray-900 text-white py-4 px-8"
