--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
 
       <section>
         <div class="mt-12 w-full px-6 sm:px-0">
-          <img class="inline-block" src="/images/main.png" alt="editor view">
+          <img class="inline-block" src="/images/main3.png" alt="editor view">
         </div>
       </section>
 
@@ -89,16 +89,12 @@
               <li>Organize doc pages easily by dragging</li>
               <li>Collaborate with team members</li>
               <li>Create private documents (only visible with team members)</li>
-              <li>Use different documentation site generators (Docute or Docsify) *</li>
+              <li>Use different documentation site generators (Docute or Docsify)</li>
               <li>Paste and upload images</li>
             </ul>
-
-            <div class="mt-12">
-              <small class="text-gray-500">* Docsify will be supported soon.</small>
-            </div>
           </div>
           <div class="flex-1">
-            <img class="inline-block" src="/images/features.png" alt="">
+            <img class="inline-block" src="/images/drag.png" alt="">
           </div>
         </div>
       </section>
